# speck-cipher

./: Cargo.toml  README.md  config.toml  uniformity_data.txt
benches/: example.rs  speck_benchmark.rs  speck_performance_benchmark.rs
data/: avalanche.gp  avalanche_data_key.txt  avalanche_data_plaintext.txt  avalanche_plot.gp  entropy.gp  entropy_values.txt  uniformity.gp  uniformity_data.txt  uniformity_data_2.txt
data/avalanche/: plot.gp
data/avalanche/test_1/: data_key.txt  data_plaintext.txt
data/avalanche/test_2/: data.txt
data/avalanche/test_3/: data.txt
data/avalanche2/: avalanche_2.gp  avalanche_2.txt
data/avalanche3/: avalanche_3.gp  avalanche_3.txt
data/entropy/: data.txt  entropy.gp  plot.gp
data/uniformity/: critical_value.txt  plot.gp
data/uniformity/test_1/: data.txt
data/uniformity/test_2/: data.txt
data/uniformity/test_3/: data.txt
docs/: avalanche.md  entropy.md  uniformity_analysis.md
examples/: avalanche.rs  avalanche_1.rs  avalanche_2.rs  avalanche_3.rs  avalanche_data.txt  avalanche_plot.gp  demo.rs  entropy.rs  test.rs  uniformity_analysis.rs  uniformity_analysis_1.rs  uniformity_analysis_2.rs  uniformity_analysis_3.rs
src/: lib.rs  pkcs7.rs  speck128_128.rs  speck128_256.rs  speck32_64.rs  speck_cbc.rs  test_utils.rs
src/block_mode/: mod.rs  speck_cbc.rs
src/padding/: mod.rs
src/speck/: mod.rs  speck128_256.rs
tests/: mod.rs
