[package]
name = "speck-cipher"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
block-modes = "0.9.1"
cipher = "0.4.4"
generic-array = "1.0.0"
hex-literal = "0.4.1"
rand = "0.8.5"
statrs = "0.16.0"

[dev-dependencies]
criterion = { version = "0.5", features = ['real_blackbox'] }
crypto-wallet = { path = "../crypto-wallet" }

[[bench]]
name = "speck_performance_benchmark"
harness = false
